--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -20,7 +20,7 @@ m4trace:aclocal.m4:1483: -1- m4_include([build-aux/m4/ltoptions.m4])
 m4trace:aclocal.m4:1484: -1- m4_include([build-aux/m4/ltsugar.m4])
 m4trace:aclocal.m4:1485: -1- m4_include([build-aux/m4/ltversion.m4])
 m4trace:aclocal.m4:1486: -1- m4_include([build-aux/m4/lt~obsolete.m4])
-m4trace:configure.ac:11: -1- AC_INIT([Litecoin Core], [_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION], [https://github.com/litecoin-project/litecoin/issues], [litecoin], [https://litecoin.org/])
+m4trace:configure.ac:11: -1- AC_INIT([WeyCoin Core], [_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION], [https://github.com/Tach-Yon/WeyCoin/issues], [weycoin], [https://weycoin.org/])
 m4trace:configure.ac:11: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:11: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:11: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -1711,10 +1711,10 @@ m4trace:configure.ac:1210: -1- AC_DEFINE_TRACE_LITERAL([COPYRIGHT_HOLDERS_FINAL]
 m4trace:configure.ac:1210: -1- m4_pattern_allow([^COPYRIGHT_HOLDERS_FINAL$])
 m4trace:configure.ac:1210: -1- AH_OUTPUT([COPYRIGHT_HOLDERS_FINAL], [/* Copyright holder(s) */
 @%:@undef COPYRIGHT_HOLDERS_FINAL])
-m4trace:configure.ac:1211: -1- AC_SUBST([CLIENT_VERSION_MAJOR], [0])
+m4trace:configure.ac:1211: -1- AC_SUBST([CLIENT_VERSION_MAJOR], [1])
 m4trace:configure.ac:1211: -1- AC_SUBST_TRACE([CLIENT_VERSION_MAJOR])
 m4trace:configure.ac:1211: -1- m4_pattern_allow([^CLIENT_VERSION_MAJOR$])
-m4trace:configure.ac:1212: -1- AC_SUBST([CLIENT_VERSION_MINOR], [15])
+m4trace:configure.ac:1212: -1- AC_SUBST([CLIENT_VERSION_MINOR], [0])
 m4trace:configure.ac:1212: -1- AC_SUBST_TRACE([CLIENT_VERSION_MINOR])
 m4trace:configure.ac:1212: -1- m4_pattern_allow([^CLIENT_VERSION_MINOR$])
 m4trace:configure.ac:1213: -1- AC_SUBST([CLIENT_VERSION_REVISION], [0])
@@ -1732,10 +1732,10 @@ m4trace:configure.ac:1216: -1- m4_pattern_allow([^COPYRIGHT_YEAR$])
 m4trace:configure.ac:1217: -1- AC_SUBST([COPYRIGHT_HOLDERS], ["The %s developers"])
 m4trace:configure.ac:1217: -1- AC_SUBST_TRACE([COPYRIGHT_HOLDERS])
 m4trace:configure.ac:1217: -1- m4_pattern_allow([^COPYRIGHT_HOLDERS$])
-m4trace:configure.ac:1218: -1- AC_SUBST([COPYRIGHT_HOLDERS_SUBSTITUTION], ["Litecoin Core"])
+m4trace:configure.ac:1218: -1- AC_SUBST([COPYRIGHT_HOLDERS_SUBSTITUTION], ["Weycoin Core"])
 m4trace:configure.ac:1218: -1- AC_SUBST_TRACE([COPYRIGHT_HOLDERS_SUBSTITUTION])
 m4trace:configure.ac:1218: -1- m4_pattern_allow([^COPYRIGHT_HOLDERS_SUBSTITUTION$])
-m4trace:configure.ac:1219: -1- AC_SUBST([COPYRIGHT_HOLDERS_FINAL], ["The Litecoin Core developers"])
+m4trace:configure.ac:1219: -1- AC_SUBST([COPYRIGHT_HOLDERS_FINAL], ["The Weycoin Core developers"])
 m4trace:configure.ac:1219: -1- AC_SUBST_TRACE([COPYRIGHT_HOLDERS_FINAL])
 m4trace:configure.ac:1219: -1- m4_pattern_allow([^COPYRIGHT_HOLDERS_FINAL$])
 m4trace:configure.ac:1220: -1- AC_SUBST([BITCOIN_DAEMON_NAME])
