--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,29 +1,26 @@
-m4trace:aclocal.m4:991: -1- AC_SUBST([am__quote])
-m4trace:aclocal.m4:991: -1- AC_SUBST_TRACE([am__quote])
-m4trace:aclocal.m4:991: -1- m4_pattern_allow([^am__quote$])
-m4trace:aclocal.m4:1448: -1- m4_include([build-aux/m4/ax_boost_base.m4])
-m4trace:aclocal.m4:1449: -1- m4_include([build-aux/m4/ax_boost_chrono.m4])
-m4trace:aclocal.m4:1450: -1- m4_include([build-aux/m4/ax_boost_filesystem.m4])
-m4trace:aclocal.m4:1451: -1- m4_include([build-aux/m4/ax_boost_program_options.m4])
-m4trace:aclocal.m4:1452: -1- m4_include([build-aux/m4/ax_boost_system.m4])
-m4trace:aclocal.m4:1453: -1- m4_include([build-aux/m4/ax_boost_thread.m4])
-m4trace:aclocal.m4:1454: -1- m4_include([build-aux/m4/ax_boost_unit_test_framework.m4])
-m4trace:aclocal.m4:1455: -1- m4_include([build-aux/m4/ax_check_compile_flag.m4])
-m4trace:aclocal.m4:1456: -1- m4_include([build-aux/m4/ax_check_link_flag.m4])
-m4trace:aclocal.m4:1457: -1- m4_include([build-aux/m4/ax_check_preproc_flag.m4])
-m4trace:aclocal.m4:1458: -1- m4_include([build-aux/m4/ax_cxx_compile_stdcxx.m4])
-m4trace:aclocal.m4:1459: -1- m4_include([build-aux/m4/ax_gcc_func_attribute.m4])
-m4trace:aclocal.m4:1460: -1- m4_include([build-aux/m4/ax_pthread.m4])
-m4trace:aclocal.m4:1461: -1- m4_include([build-aux/m4/l_atomic.m4])
-m4trace:aclocal.m4:1462: -1- m4_include([build-aux/m4/libtool.m4])
-m4trace:aclocal.m4:1463: -1- m4_include([build-aux/m4/ltoptions.m4])
-m4trace:aclocal.m4:1464: -1- m4_include([build-aux/m4/ltsugar.m4])
-m4trace:aclocal.m4:1465: -1- m4_include([build-aux/m4/ltversion.m4])
-m4trace:aclocal.m4:1466: -1- m4_include([build-aux/m4/lt~obsolete.m4])
-m4trace:aclocal.m4:1467: -1- m4_include([build-aux/m4/weycoin_find_bdb48.m4])
-m4trace:aclocal.m4:1468: -1- m4_include([build-aux/m4/weycoin_qt.m4])
-m4trace:aclocal.m4:1469: -1- m4_include([build-aux/m4/weycoin_subdir_to_include.m4])
-m4trace:configure.ac:11: -1- AC_INIT([WEYCOIN Core], [_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION], [https://github.com/weycoin/weycoin/issues], [weycoin], [https://weycoin.info/])
+m4trace:aclocal.m4:1465: -1- m4_include([build-aux/m4/ax_boost_base.m4])
+m4trace:aclocal.m4:1466: -1- m4_include([build-aux/m4/ax_boost_chrono.m4])
+m4trace:aclocal.m4:1467: -1- m4_include([build-aux/m4/ax_boost_filesystem.m4])
+m4trace:aclocal.m4:1468: -1- m4_include([build-aux/m4/ax_boost_program_options.m4])
+m4trace:aclocal.m4:1469: -1- m4_include([build-aux/m4/ax_boost_system.m4])
+m4trace:aclocal.m4:1470: -1- m4_include([build-aux/m4/ax_boost_thread.m4])
+m4trace:aclocal.m4:1471: -1- m4_include([build-aux/m4/ax_boost_unit_test_framework.m4])
+m4trace:aclocal.m4:1472: -1- m4_include([build-aux/m4/ax_check_compile_flag.m4])
+m4trace:aclocal.m4:1473: -1- m4_include([build-aux/m4/ax_check_link_flag.m4])
+m4trace:aclocal.m4:1474: -1- m4_include([build-aux/m4/ax_check_preproc_flag.m4])
+m4trace:aclocal.m4:1475: -1- m4_include([build-aux/m4/ax_cxx_compile_stdcxx.m4])
+m4trace:aclocal.m4:1476: -1- m4_include([build-aux/m4/ax_gcc_func_attribute.m4])
+m4trace:aclocal.m4:1477: -1- m4_include([build-aux/m4/ax_pthread.m4])
+m4trace:aclocal.m4:1478: -1- m4_include([build-aux/m4/l_atomic.m4])
+m4trace:aclocal.m4:1479: -1- m4_include([build-aux/m4/libtool.m4])
+m4trace:aclocal.m4:1480: -1- m4_include([build-aux/m4/ltoptions.m4])
+m4trace:aclocal.m4:1481: -1- m4_include([build-aux/m4/ltsugar.m4])
+m4trace:aclocal.m4:1482: -1- m4_include([build-aux/m4/ltversion.m4])
+m4trace:aclocal.m4:1483: -1- m4_include([build-aux/m4/lt~obsolete.m4])
+m4trace:aclocal.m4:1484: -1- m4_include([build-aux/m4/weycoin_find_bdb48.m4])
+m4trace:aclocal.m4:1485: -1- m4_include([build-aux/m4/weycoin_qt.m4])
+m4trace:aclocal.m4:1486: -1- m4_include([build-aux/m4/weycoin_subdir_to_include.m4])
+m4trace:configure.ac:11: -1- AC_INIT([WEYCOIN Core], [_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION], [https://github.com/weycoin/weycoin/issues], [weycoin], [https://weycoinproject.org/])
 m4trace:configure.ac:11: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:11: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:11: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -88,6 +85,9 @@ m4trace:configure.ac:11: -1- m4_pattern_allow([^sharedstatedir$])
 m4trace:configure.ac:11: -1- AC_SUBST([localstatedir], ['${prefix}/var'])
 m4trace:configure.ac:11: -1- AC_SUBST_TRACE([localstatedir])
 m4trace:configure.ac:11: -1- m4_pattern_allow([^localstatedir$])
+m4trace:configure.ac:11: -1- AC_SUBST([runstatedir], ['${localstatedir}/run'])
+m4trace:configure.ac:11: -1- AC_SUBST_TRACE([runstatedir])
+m4trace:configure.ac:11: -1- m4_pattern_allow([^runstatedir$])
 m4trace:configure.ac:11: -1- AC_SUBST([includedir], ['${prefix}/include'])
 m4trace:configure.ac:11: -1- AC_SUBST_TRACE([includedir])
 m4trace:configure.ac:11: -1- m4_pattern_allow([^includedir$])
@@ -206,7 +206,7 @@ m4trace:configure.ac:25: -1- AH_OUTPUT([00002], [#define WEYCOIN_CONFIG_H])
 m4trace:configure.ac:26: -1- AH_OUTPUT([zzzz3], [#endif //WEYCOIN_CONFIG_H])
 m4trace:configure.ac:32: -1- AM_INIT_AUTOMAKE([no-define subdir-objects foreign])
 m4trace:configure.ac:32: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:32: -1- AM_AUTOMAKE_VERSION([1.16])
+m4trace:configure.ac:32: -1- AM_AUTOMAKE_VERSION([1.15])
 m4trace:configure.ac:32: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:32: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:32: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -358,6 +358,9 @@ m4trace:configure.ac:47: -1- m4_pattern_allow([^DEPDIR$])
 m4trace:configure.ac:47: -1- AC_SUBST([am__include])
 m4trace:configure.ac:47: -1- AC_SUBST_TRACE([am__include])
 m4trace:configure.ac:47: -1- m4_pattern_allow([^am__include$])
+m4trace:configure.ac:47: -1- AC_SUBST([am__quote])
+m4trace:configure.ac:47: -1- AC_SUBST_TRACE([am__quote])
+m4trace:configure.ac:47: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:47: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
 m4trace:configure.ac:47: -1- AC_SUBST([AMDEP_TRUE])
 m4trace:configure.ac:47: -1- AC_SUBST_TRACE([AMDEP_TRUE])
@@ -396,41 +399,41 @@ m4trace:configure.ac:58: -1- AH_OUTPUT([HAVE_CXX11], [/* define if the compiler 
 m4trace:configure.ac:58: -1- AC_SUBST([HAVE_CXX11])
 m4trace:configure.ac:58: -1- AC_SUBST_TRACE([HAVE_CXX11])
 m4trace:configure.ac:58: -1- m4_pattern_allow([^HAVE_CXX11$])
-m4trace:configure.ac:69: -1- AC_SUBST([OBJCXX])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([OBJCXX])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^OBJCXX$])
-m4trace:configure.ac:69: -1- AC_SUBST([OBJCXXFLAGS])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([OBJCXXFLAGS])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^OBJCXXFLAGS$])
-m4trace:configure.ac:69: -1- AC_SUBST([LDFLAGS])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([LDFLAGS])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^LDFLAGS$])
-m4trace:configure.ac:69: -1- AC_SUBST([LIBS])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([LIBS])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^LIBS$])
-m4trace:configure.ac:69: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:69: -1- AC_SUBST([OBJCXX])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([OBJCXX])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^OBJCXX$])
-m4trace:configure.ac:69: -1- AC_SUBST([ac_ct_OBJCXX])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([ac_ct_OBJCXX])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^ac_ct_OBJCXX$])
-m4trace:configure.ac:69: -1- AC_SUBST([OBJCXXDEPMODE], [depmode=$am_cv_OBJCXX_dependencies_compiler_type])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([OBJCXXDEPMODE])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^OBJCXXDEPMODE$])
-m4trace:configure.ac:69: -1- AM_CONDITIONAL([am__fastdepOBJCXX], [
+m4trace:configure.ac:64: -1- AC_SUBST([OBJCXX])
+m4trace:configure.ac:64: -1- AC_SUBST_TRACE([OBJCXX])
+m4trace:configure.ac:64: -1- m4_pattern_allow([^OBJCXX$])
+m4trace:configure.ac:64: -1- AC_SUBST([OBJCXXFLAGS])
+m4trace:configure.ac:64: -1- AC_SUBST_TRACE([OBJCXXFLAGS])
+m4trace:configure.ac:64: -1- m4_pattern_allow([^OBJCXXFLAGS$])
+m4trace:configure.ac:64: -1- AC_SUBST([LDFLAGS])
+m4trace:configure.ac:64: -1- AC_SUBST_TRACE([LDFLAGS])
+m4trace:configure.ac:64: -1- m4_pattern_allow([^LDFLAGS$])
+m4trace:configure.ac:64: -1- AC_SUBST([LIBS])
+m4trace:configure.ac:64: -1- AC_SUBST_TRACE([LIBS])
+m4trace:configure.ac:64: -1- m4_pattern_allow([^LIBS$])
+m4trace:configure.ac:64: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:64: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:64: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:64: -1- AC_SUBST([OBJCXX])
+m4trace:configure.ac:64: -1- AC_SUBST_TRACE([OBJCXX])
+m4trace:configure.ac:64: -1- m4_pattern_allow([^OBJCXX$])
+m4trace:configure.ac:64: -1- AC_SUBST([ac_ct_OBJCXX])
+m4trace:configure.ac:64: -1- AC_SUBST_TRACE([ac_ct_OBJCXX])
+m4trace:configure.ac:64: -1- m4_pattern_allow([^ac_ct_OBJCXX$])
+m4trace:configure.ac:64: -1- AC_SUBST([OBJCXXDEPMODE], [depmode=$am_cv_OBJCXX_dependencies_compiler_type])
+m4trace:configure.ac:64: -1- AC_SUBST_TRACE([OBJCXXDEPMODE])
+m4trace:configure.ac:64: -1- m4_pattern_allow([^OBJCXXDEPMODE$])
+m4trace:configure.ac:64: -1- AM_CONDITIONAL([am__fastdepOBJCXX], [
   test "x$enable_dependency_tracking" != xno \
   && test "$am_cv_OBJCXX_dependencies_compiler_type" = gcc3])
-m4trace:configure.ac:69: -1- AC_SUBST([am__fastdepOBJCXX_TRUE])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([am__fastdepOBJCXX_TRUE])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^am__fastdepOBJCXX_TRUE$])
-m4trace:configure.ac:69: -1- AC_SUBST([am__fastdepOBJCXX_FALSE])
-m4trace:configure.ac:69: -1- AC_SUBST_TRACE([am__fastdepOBJCXX_FALSE])
-m4trace:configure.ac:69: -1- m4_pattern_allow([^am__fastdepOBJCXX_FALSE$])
-m4trace:configure.ac:69: -1- _AM_SUBST_NOTMAKE([am__fastdepOBJCXX_TRUE])
-m4trace:configure.ac:69: -1- _AM_SUBST_NOTMAKE([am__fastdepOBJCXX_FALSE])
+m4trace:configure.ac:64: -1- AC_SUBST([am__fastdepOBJCXX_TRUE])
+m4trace:configure.ac:64: -1- AC_SUBST_TRACE([am__fastdepOBJCXX_TRUE])
+m4trace:configure.ac:64: -1- m4_pattern_allow([^am__fastdepOBJCXX_TRUE$])
+m4trace:configure.ac:64: -1- AC_SUBST([am__fastdepOBJCXX_FALSE])
+m4trace:configure.ac:64: -1- AC_SUBST_TRACE([am__fastdepOBJCXX_FALSE])
+m4trace:configure.ac:64: -1- m4_pattern_allow([^am__fastdepOBJCXX_FALSE$])
+m4trace:configure.ac:64: -1- _AM_SUBST_NOTMAKE([am__fastdepOBJCXX_TRUE])
+m4trace:configure.ac:64: -1- _AM_SUBST_NOTMAKE([am__fastdepOBJCXX_FALSE])
 m4trace:configure.ac:72: -1- LT_INIT([pic-only])
 m4trace:configure.ac:72: -1- m4_pattern_forbid([^_?LT_[A-Z_]+$])
 m4trace:configure.ac:72: -1- m4_pattern_allow([^(_LT_EOF|LT_DLGLOBAL|LT_DLLAZY_OR_NOW|LT_MULTI_MODULE)$])
@@ -784,21 +787,21 @@ m4trace:configure.ac:373: -1- m4_pattern_allow([^IMAGEMAGICK_CONVERT$])
 m4trace:configure.ac:374: -1- AC_SUBST([TIFFCP])
 m4trace:configure.ac:374: -1- AC_SUBST_TRACE([TIFFCP])
 m4trace:configure.ac:374: -1- m4_pattern_allow([^TIFFCP$])
-m4trace:configure.ac:413: -1- m4_pattern_forbid([^_?PKG_[A-Z_]+$])
-m4trace:configure.ac:413: -1- m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
-m4trace:configure.ac:413: -1- m4_pattern_allow([^PKG_CONFIG_(DISABLE_UNINSTALLED|TOP_BUILD_DIR|DEBUG_SPEW)$])
-m4trace:configure.ac:413: -1- AC_SUBST([PKG_CONFIG])
-m4trace:configure.ac:413: -1- AC_SUBST_TRACE([PKG_CONFIG])
-m4trace:configure.ac:413: -1- m4_pattern_allow([^PKG_CONFIG$])
-m4trace:configure.ac:413: -1- AC_SUBST([PKG_CONFIG_PATH])
-m4trace:configure.ac:413: -1- AC_SUBST_TRACE([PKG_CONFIG_PATH])
-m4trace:configure.ac:413: -1- m4_pattern_allow([^PKG_CONFIG_PATH$])
-m4trace:configure.ac:413: -1- AC_SUBST([PKG_CONFIG_LIBDIR])
-m4trace:configure.ac:413: -1- AC_SUBST_TRACE([PKG_CONFIG_LIBDIR])
-m4trace:configure.ac:413: -1- m4_pattern_allow([^PKG_CONFIG_LIBDIR$])
-m4trace:configure.ac:413: -1- AC_SUBST([PKG_CONFIG])
-m4trace:configure.ac:413: -1- AC_SUBST_TRACE([PKG_CONFIG])
-m4trace:configure.ac:413: -1- m4_pattern_allow([^PKG_CONFIG$])
+m4trace:configure.ac:408: -1- m4_pattern_forbid([^_?PKG_[A-Z_]+$])
+m4trace:configure.ac:408: -1- m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
+m4trace:configure.ac:408: -1- m4_pattern_allow([^PKG_CONFIG_(DISABLE_UNINSTALLED|TOP_BUILD_DIR|DEBUG_SPEW)$])
+m4trace:configure.ac:408: -1- AC_SUBST([PKG_CONFIG])
+m4trace:configure.ac:408: -1- AC_SUBST_TRACE([PKG_CONFIG])
+m4trace:configure.ac:408: -1- m4_pattern_allow([^PKG_CONFIG$])
+m4trace:configure.ac:408: -1- AC_SUBST([PKG_CONFIG_PATH])
+m4trace:configure.ac:408: -1- AC_SUBST_TRACE([PKG_CONFIG_PATH])
+m4trace:configure.ac:408: -1- m4_pattern_allow([^PKG_CONFIG_PATH$])
+m4trace:configure.ac:408: -1- AC_SUBST([PKG_CONFIG_LIBDIR])
+m4trace:configure.ac:408: -1- AC_SUBST_TRACE([PKG_CONFIG_LIBDIR])
+m4trace:configure.ac:408: -1- m4_pattern_allow([^PKG_CONFIG_LIBDIR$])
+m4trace:configure.ac:408: -1- AC_SUBST([PKG_CONFIG])
+m4trace:configure.ac:408: -1- AC_SUBST_TRACE([PKG_CONFIG])
+m4trace:configure.ac:408: -1- m4_pattern_allow([^PKG_CONFIG$])
 m4trace:configure.ac:417: -1- AC_SUBST([EXTENDED_RPC_TESTS], [-extended])
 m4trace:configure.ac:417: -1- AC_SUBST_TRACE([EXTENDED_RPC_TESTS])
 m4trace:configure.ac:417: -1- m4_pattern_allow([^EXTENDED_RPC_TESTS$])
@@ -928,92 +931,92 @@ m4trace:configure.ac:538: -1- m4_pattern_allow([^HAVE_DECL_DAEMON$])
 m4trace:configure.ac:538: -1- AH_OUTPUT([HAVE_DECL_DAEMON], [/* Define to 1 if you have the declaration of `daemon\', and to 0 if you don\'t.
    */
 @%:@undef HAVE_DECL_DAEMON])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_LE16TOH])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_LE16TOH$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_LE16TOH], [/* Define to 1 if you have the declaration of `le16toh\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_LE16TOH])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_LE16TOH$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_LE16TOH], [/* Define to 1 if you have the declaration of `le16toh\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_LE16TOH])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_LE32TOH])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_LE32TOH$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_LE32TOH], [/* Define to 1 if you have the declaration of `le32toh\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_LE32TOH])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_LE32TOH$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_LE32TOH], [/* Define to 1 if you have the declaration of `le32toh\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_LE32TOH])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_LE64TOH])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_LE64TOH$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_LE64TOH], [/* Define to 1 if you have the declaration of `le64toh\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_LE64TOH])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_LE64TOH$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_LE64TOH], [/* Define to 1 if you have the declaration of `le64toh\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_LE64TOH])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOLE16])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_HTOLE16$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_HTOLE16], [/* Define to 1 if you have the declaration of `htole16\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOLE16])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_HTOLE16$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_HTOLE16], [/* Define to 1 if you have the declaration of `htole16\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_HTOLE16])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOLE32])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_HTOLE32$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_HTOLE32], [/* Define to 1 if you have the declaration of `htole32\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOLE32])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_HTOLE32$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_HTOLE32], [/* Define to 1 if you have the declaration of `htole32\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_HTOLE32])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOLE64])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_HTOLE64$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_HTOLE64], [/* Define to 1 if you have the declaration of `htole64\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOLE64])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_HTOLE64$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_HTOLE64], [/* Define to 1 if you have the declaration of `htole64\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_HTOLE64])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BE16TOH])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_BE16TOH$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_BE16TOH], [/* Define to 1 if you have the declaration of `be16toh\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BE16TOH])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_BE16TOH$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_BE16TOH], [/* Define to 1 if you have the declaration of `be16toh\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_BE16TOH])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BE32TOH])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_BE32TOH$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_BE32TOH], [/* Define to 1 if you have the declaration of `be32toh\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BE32TOH])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_BE32TOH$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_BE32TOH], [/* Define to 1 if you have the declaration of `be32toh\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_BE32TOH])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BE64TOH])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_BE64TOH$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_BE64TOH], [/* Define to 1 if you have the declaration of `be64toh\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BE64TOH])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_BE64TOH$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_BE64TOH], [/* Define to 1 if you have the declaration of `be64toh\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_BE64TOH])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOBE16])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_HTOBE16$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_HTOBE16], [/* Define to 1 if you have the declaration of `htobe16\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOBE16])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_HTOBE16$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_HTOBE16], [/* Define to 1 if you have the declaration of `htobe16\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_HTOBE16])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOBE32])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_HTOBE32$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_HTOBE32], [/* Define to 1 if you have the declaration of `htobe32\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOBE32])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_HTOBE32$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_HTOBE32], [/* Define to 1 if you have the declaration of `htobe32\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_HTOBE32])
-m4trace:configure.ac:545: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOBE64])
-m4trace:configure.ac:545: -1- m4_pattern_allow([^HAVE_DECL_HTOBE64$])
-m4trace:configure.ac:545: -1- AH_OUTPUT([HAVE_DECL_HTOBE64], [/* Define to 1 if you have the declaration of `htobe64\', and to 0 if you
+m4trace:configure.ac:540: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_HTOBE64])
+m4trace:configure.ac:540: -1- m4_pattern_allow([^HAVE_DECL_HTOBE64$])
+m4trace:configure.ac:540: -1- AH_OUTPUT([HAVE_DECL_HTOBE64], [/* Define to 1 if you have the declaration of `htobe64\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_HTOBE64])
-m4trace:configure.ac:550: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BSWAP_16])
-m4trace:configure.ac:550: -1- m4_pattern_allow([^HAVE_DECL_BSWAP_16$])
-m4trace:configure.ac:550: -1- AH_OUTPUT([HAVE_DECL_BSWAP_16], [/* Define to 1 if you have the declaration of `bswap_16\', and to 0 if you
+m4trace:configure.ac:547: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BSWAP_16])
+m4trace:configure.ac:547: -1- m4_pattern_allow([^HAVE_DECL_BSWAP_16$])
+m4trace:configure.ac:547: -1- AH_OUTPUT([HAVE_DECL_BSWAP_16], [/* Define to 1 if you have the declaration of `bswap_16\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_BSWAP_16])
-m4trace:configure.ac:550: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BSWAP_32])
-m4trace:configure.ac:550: -1- m4_pattern_allow([^HAVE_DECL_BSWAP_32$])
-m4trace:configure.ac:550: -1- AH_OUTPUT([HAVE_DECL_BSWAP_32], [/* Define to 1 if you have the declaration of `bswap_32\', and to 0 if you
+m4trace:configure.ac:547: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BSWAP_32])
+m4trace:configure.ac:547: -1- m4_pattern_allow([^HAVE_DECL_BSWAP_32$])
+m4trace:configure.ac:547: -1- AH_OUTPUT([HAVE_DECL_BSWAP_32], [/* Define to 1 if you have the declaration of `bswap_32\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_BSWAP_32])
-m4trace:configure.ac:550: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BSWAP_64])
-m4trace:configure.ac:550: -1- m4_pattern_allow([^HAVE_DECL_BSWAP_64$])
-m4trace:configure.ac:550: -1- AH_OUTPUT([HAVE_DECL_BSWAP_64], [/* Define to 1 if you have the declaration of `bswap_64\', and to 0 if you
+m4trace:configure.ac:547: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_BSWAP_64])
+m4trace:configure.ac:547: -1- m4_pattern_allow([^HAVE_DECL_BSWAP_64$])
+m4trace:configure.ac:547: -1- AH_OUTPUT([HAVE_DECL_BSWAP_64], [/* Define to 1 if you have the declaration of `bswap_64\', and to 0 if you
    don\'t. */
 @%:@undef HAVE_DECL_BSWAP_64])
-m4trace:configure.ac:558: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MSG_NOSIGNAL])
-m4trace:configure.ac:558: -1- m4_pattern_allow([^HAVE_MSG_NOSIGNAL$])
-m4trace:configure.ac:558: -1- AH_OUTPUT([HAVE_MSG_NOSIGNAL], [/* Define this symbol if you have MSG_NOSIGNAL */
+m4trace:configure.ac:554: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MSG_NOSIGNAL])
+m4trace:configure.ac:554: -1- m4_pattern_allow([^HAVE_MSG_NOSIGNAL$])
+m4trace:configure.ac:554: -1- AH_OUTPUT([HAVE_MSG_NOSIGNAL], [/* Define this symbol if you have MSG_NOSIGNAL */
 @%:@undef HAVE_MSG_NOSIGNAL])
-m4trace:configure.ac:566: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MALLOPT_ARENA_MAX])
-m4trace:configure.ac:566: -1- m4_pattern_allow([^HAVE_MALLOPT_ARENA_MAX$])
-m4trace:configure.ac:566: -1- AH_OUTPUT([HAVE_MALLOPT_ARENA_MAX], [/* Define this symbol if you have mallopt with M_ARENA_MAX */
+m4trace:configure.ac:562: -1- AC_DEFINE_TRACE_LITERAL([HAVE_MALLOPT_ARENA_MAX])
+m4trace:configure.ac:562: -1- m4_pattern_allow([^HAVE_MALLOPT_ARENA_MAX$])
+m4trace:configure.ac:562: -1- AH_OUTPUT([HAVE_MALLOPT_ARENA_MAX], [/* Define this symbol if you have mallopt with M_ARENA_MAX */
 @%:@undef HAVE_MALLOPT_ARENA_MAX])
-m4trace:configure.ac:583: -1- AC_DEFINE_TRACE_LITERAL([HAVE_VISIBILITY_ATTRIBUTE])
-m4trace:configure.ac:583: -1- m4_pattern_allow([^HAVE_VISIBILITY_ATTRIBUTE$])
-m4trace:configure.ac:583: -1- AH_OUTPUT([HAVE_VISIBILITY_ATTRIBUTE], [/* Define if the visibility attribute is supported. */
+m4trace:configure.ac:569: -1- AC_DEFINE_TRACE_LITERAL([HAVE_VISIBILITY_ATTRIBUTE])
+m4trace:configure.ac:569: -1- m4_pattern_allow([^HAVE_VISIBILITY_ATTRIBUTE$])
+m4trace:configure.ac:569: -1- AH_OUTPUT([HAVE_VISIBILITY_ATTRIBUTE], [/* Define if the visibility attribute is supported. */
 @%:@undef HAVE_VISIBILITY_ATTRIBUTE])
 m4trace:configure.ac:593: -1- AM_CONDITIONAL([EMBEDDED_LEVELDB], [true])
 m4trace:configure.ac:593: -1- AC_SUBST([EMBEDDED_LEVELDB_TRUE])
@@ -1045,13 +1048,13 @@ m4trace:configure.ac:600: -1- m4_pattern_allow([^BDB_CPPFLAGS$])
 m4trace:configure.ac:600: -1- AC_SUBST([BDB_LIBS])
 m4trace:configure.ac:600: -1- AC_SUBST_TRACE([BDB_LIBS])
 m4trace:configure.ac:600: -1- m4_pattern_allow([^BDB_LIBS$])
-m4trace:configure.ac:609: -1- AH_OUTPUT([HAVE_MINIUPNPC_MINIWGET_H], [/* Define to 1 if you have the <miniupnpc/miniwget.h> header file. */
+m4trace:configure.ac:605: -1- AH_OUTPUT([HAVE_MINIUPNPC_MINIWGET_H], [/* Define to 1 if you have the <miniupnpc/miniwget.h> header file. */
 @%:@undef HAVE_MINIUPNPC_MINIWGET_H])
-m4trace:configure.ac:609: -1- AH_OUTPUT([HAVE_MINIUPNPC_MINIUPNPC_H], [/* Define to 1 if you have the <miniupnpc/miniupnpc.h> header file. */
+m4trace:configure.ac:605: -1- AH_OUTPUT([HAVE_MINIUPNPC_MINIUPNPC_H], [/* Define to 1 if you have the <miniupnpc/miniupnpc.h> header file. */
 @%:@undef HAVE_MINIUPNPC_MINIUPNPC_H])
-m4trace:configure.ac:609: -1- AH_OUTPUT([HAVE_MINIUPNPC_UPNPCOMMANDS_H], [/* Define to 1 if you have the <miniupnpc/upnpcommands.h> header file. */
+m4trace:configure.ac:605: -1- AH_OUTPUT([HAVE_MINIUPNPC_UPNPCOMMANDS_H], [/* Define to 1 if you have the <miniupnpc/upnpcommands.h> header file. */
 @%:@undef HAVE_MINIUPNPC_UPNPCOMMANDS_H])
-m4trace:configure.ac:609: -1- AH_OUTPUT([HAVE_MINIUPNPC_UPNPERRORS_H], [/* Define to 1 if you have the <miniupnpc/upnperrors.h> header file. */
+m4trace:configure.ac:605: -1- AH_OUTPUT([HAVE_MINIUPNPC_UPNPERRORS_H], [/* Define to 1 if you have the <miniupnpc/upnperrors.h> header file. */
 @%:@undef HAVE_MINIUPNPC_UPNPERRORS_H])
 m4trace:configure.ac:612: -1- AC_SUBST([QT_TRANSLATION_DIR], [$qt_translation_path])
 m4trace:configure.ac:612: -1- AC_SUBST_TRACE([QT_TRANSLATION_DIR])
@@ -1305,99 +1308,99 @@ m4trace:configure.ac:672: -1- m4_pattern_allow([^BOOST_UNIT_TEST_FRAMEWORK_LIB$]
 m4trace:configure.ac:672: -1- AC_SUBST([BOOST_UNIT_TEST_FRAMEWORK_LIB])
 m4trace:configure.ac:672: -1- AC_SUBST_TRACE([BOOST_UNIT_TEST_FRAMEWORK_LIB])
 m4trace:configure.ac:672: -1- m4_pattern_allow([^BOOST_UNIT_TEST_FRAMEWORK_LIB$])
-m4trace:configure.ac:756: -1- AC_DEFINE_TRACE_LITERAL([HAVE_WORKING_BOOST_SLEEP_FOR])
-m4trace:configure.ac:756: -1- m4_pattern_allow([^HAVE_WORKING_BOOST_SLEEP_FOR$])
-m4trace:configure.ac:756: -1- AH_OUTPUT([HAVE_WORKING_BOOST_SLEEP_FOR], [/* Define this symbol if boost sleep_for works */
+m4trace:configure.ac:744: -1- AC_DEFINE_TRACE_LITERAL([HAVE_WORKING_BOOST_SLEEP_FOR])
+m4trace:configure.ac:744: -1- m4_pattern_allow([^HAVE_WORKING_BOOST_SLEEP_FOR$])
+m4trace:configure.ac:744: -1- AH_OUTPUT([HAVE_WORKING_BOOST_SLEEP_FOR], [/* Define this symbol if boost sleep_for works */
 @%:@undef HAVE_WORKING_BOOST_SLEEP_FOR])
-m4trace:configure.ac:777: -1- AC_DEFINE_TRACE_LITERAL([HAVE_WORKING_BOOST_SLEEP])
-m4trace:configure.ac:777: -1- m4_pattern_allow([^HAVE_WORKING_BOOST_SLEEP$])
-m4trace:configure.ac:777: -1- AH_OUTPUT([HAVE_WORKING_BOOST_SLEEP], [/* Define this symbol if boost sleep works */
+m4trace:configure.ac:765: -1- AC_DEFINE_TRACE_LITERAL([HAVE_WORKING_BOOST_SLEEP])
+m4trace:configure.ac:765: -1- m4_pattern_allow([^HAVE_WORKING_BOOST_SLEEP$])
+m4trace:configure.ac:765: -1- AH_OUTPUT([HAVE_WORKING_BOOST_SLEEP], [/* Define this symbol if boost sleep works */
 @%:@undef HAVE_WORKING_BOOST_SLEEP])
-m4trace:configure.ac:816: -1- AC_SUBST([SSL_CFLAGS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([SSL_CFLAGS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^SSL_CFLAGS$])
-m4trace:configure.ac:816: -1- AC_SUBST([SSL_LIBS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([SSL_LIBS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^SSL_LIBS$])
-m4trace:configure.ac:816: -1- AC_SUBST([CRYPTO_CFLAGS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([CRYPTO_CFLAGS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^CRYPTO_CFLAGS$])
-m4trace:configure.ac:816: -1- AC_SUBST([CRYPTO_LIBS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([CRYPTO_LIBS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^CRYPTO_LIBS$])
-m4trace:configure.ac:816: -1- AC_SUBST([PROTOBUF_CFLAGS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([PROTOBUF_CFLAGS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^PROTOBUF_CFLAGS$])
-m4trace:configure.ac:816: -1- AC_SUBST([PROTOBUF_LIBS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([PROTOBUF_LIBS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^PROTOBUF_LIBS$])
-m4trace:configure.ac:816: -1- AC_SUBST([QR_CFLAGS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([QR_CFLAGS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^QR_CFLAGS$])
-m4trace:configure.ac:816: -1- AC_SUBST([QR_LIBS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([QR_LIBS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^QR_LIBS$])
-m4trace:configure.ac:816: -1- AC_SUBST([EVENT_CFLAGS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([EVENT_CFLAGS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^EVENT_CFLAGS$])
-m4trace:configure.ac:816: -1- AC_SUBST([EVENT_LIBS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([EVENT_LIBS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^EVENT_LIBS$])
-m4trace:configure.ac:816: -1- AC_SUBST([EVENT_PTHREADS_CFLAGS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([EVENT_PTHREADS_CFLAGS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^EVENT_PTHREADS_CFLAGS$])
-m4trace:configure.ac:816: -1- AC_SUBST([EVENT_PTHREADS_LIBS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([EVENT_PTHREADS_LIBS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^EVENT_PTHREADS_LIBS$])
-m4trace:configure.ac:816: -1- AC_SUBST([ZMQ_CFLAGS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([ZMQ_CFLAGS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^ZMQ_CFLAGS$])
-m4trace:configure.ac:816: -1- AC_SUBST([ZMQ_LIBS])
-m4trace:configure.ac:816: -1- AC_SUBST_TRACE([ZMQ_LIBS])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^ZMQ_LIBS$])
-m4trace:configure.ac:816: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^ENABLE_ZMQ$])
-m4trace:configure.ac:816: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
+m4trace:configure.ac:790: -1- AC_SUBST([SSL_CFLAGS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([SSL_CFLAGS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^SSL_CFLAGS$])
+m4trace:configure.ac:790: -1- AC_SUBST([SSL_LIBS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([SSL_LIBS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^SSL_LIBS$])
+m4trace:configure.ac:790: -1- AC_SUBST([CRYPTO_CFLAGS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([CRYPTO_CFLAGS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^CRYPTO_CFLAGS$])
+m4trace:configure.ac:790: -1- AC_SUBST([CRYPTO_LIBS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([CRYPTO_LIBS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^CRYPTO_LIBS$])
+m4trace:configure.ac:790: -1- AC_SUBST([PROTOBUF_CFLAGS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([PROTOBUF_CFLAGS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^PROTOBUF_CFLAGS$])
+m4trace:configure.ac:790: -1- AC_SUBST([PROTOBUF_LIBS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([PROTOBUF_LIBS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^PROTOBUF_LIBS$])
+m4trace:configure.ac:790: -1- AC_SUBST([QR_CFLAGS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([QR_CFLAGS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^QR_CFLAGS$])
+m4trace:configure.ac:790: -1- AC_SUBST([QR_LIBS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([QR_LIBS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^QR_LIBS$])
+m4trace:configure.ac:790: -1- AC_SUBST([EVENT_CFLAGS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([EVENT_CFLAGS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^EVENT_CFLAGS$])
+m4trace:configure.ac:790: -1- AC_SUBST([EVENT_LIBS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([EVENT_LIBS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^EVENT_LIBS$])
+m4trace:configure.ac:790: -1- AC_SUBST([EVENT_PTHREADS_CFLAGS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([EVENT_PTHREADS_CFLAGS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^EVENT_PTHREADS_CFLAGS$])
+m4trace:configure.ac:790: -1- AC_SUBST([EVENT_PTHREADS_LIBS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([EVENT_PTHREADS_LIBS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^EVENT_PTHREADS_LIBS$])
+m4trace:configure.ac:790: -1- AC_SUBST([ZMQ_CFLAGS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([ZMQ_CFLAGS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^ZMQ_CFLAGS$])
+m4trace:configure.ac:790: -1- AC_SUBST([ZMQ_LIBS])
+m4trace:configure.ac:790: -1- AC_SUBST_TRACE([ZMQ_LIBS])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^ZMQ_LIBS$])
+m4trace:configure.ac:790: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^ENABLE_ZMQ$])
+m4trace:configure.ac:790: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
 @%:@undef ENABLE_ZMQ])
-m4trace:configure.ac:816: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^ENABLE_ZMQ$])
-m4trace:configure.ac:816: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
+m4trace:configure.ac:790: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^ENABLE_ZMQ$])
+m4trace:configure.ac:790: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
 @%:@undef ENABLE_ZMQ])
-m4trace:configure.ac:816: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^ENABLE_ZMQ$])
-m4trace:configure.ac:816: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
+m4trace:configure.ac:790: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^ENABLE_ZMQ$])
+m4trace:configure.ac:790: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
 @%:@undef ENABLE_ZMQ])
-m4trace:configure.ac:816: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
-m4trace:configure.ac:816: -1- m4_pattern_allow([^ENABLE_ZMQ$])
-m4trace:configure.ac:816: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
+m4trace:configure.ac:790: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
+m4trace:configure.ac:790: -1- m4_pattern_allow([^ENABLE_ZMQ$])
+m4trace:configure.ac:790: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
 @%:@undef ENABLE_ZMQ])
-m4trace:configure.ac:837: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
-m4trace:configure.ac:837: -1- m4_pattern_allow([^ENABLE_ZMQ$])
-m4trace:configure.ac:837: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
+m4trace:configure.ac:833: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
+m4trace:configure.ac:833: -1- m4_pattern_allow([^ENABLE_ZMQ$])
+m4trace:configure.ac:833: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
 @%:@undef ENABLE_ZMQ])
-m4trace:configure.ac:837: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
-m4trace:configure.ac:837: -1- m4_pattern_allow([^ENABLE_ZMQ$])
-m4trace:configure.ac:837: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
+m4trace:configure.ac:833: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
+m4trace:configure.ac:833: -1- m4_pattern_allow([^ENABLE_ZMQ$])
+m4trace:configure.ac:833: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
 @%:@undef ENABLE_ZMQ])
-m4trace:configure.ac:841: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
-m4trace:configure.ac:841: -1- m4_pattern_allow([^ENABLE_ZMQ$])
-m4trace:configure.ac:841: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
+m4trace:configure.ac:838: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
+m4trace:configure.ac:838: -1- m4_pattern_allow([^ENABLE_ZMQ$])
+m4trace:configure.ac:838: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
 @%:@undef ENABLE_ZMQ])
 m4trace:configure.ac:843: -1- AC_DEFINE_TRACE_LITERAL([ENABLE_ZMQ])
 m4trace:configure.ac:843: -1- m4_pattern_allow([^ENABLE_ZMQ$])
 m4trace:configure.ac:843: -1- AH_OUTPUT([ENABLE_ZMQ], [/* Define to 1 to enable ZMQ functions */
 @%:@undef ENABLE_ZMQ])
-m4trace:configure.ac:866: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_EVP_MD_CTX_NEW])
-m4trace:configure.ac:866: -1- m4_pattern_allow([^HAVE_DECL_EVP_MD_CTX_NEW$])
-m4trace:configure.ac:866: -1- AH_OUTPUT([HAVE_DECL_EVP_MD_CTX_NEW], [/* Define to 1 if you have the declaration of `EVP_MD_CTX_new\', and to 0 if
+m4trace:configure.ac:864: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_EVP_MD_CTX_NEW])
+m4trace:configure.ac:864: -1- m4_pattern_allow([^HAVE_DECL_EVP_MD_CTX_NEW$])
+m4trace:configure.ac:864: -1- AH_OUTPUT([HAVE_DECL_EVP_MD_CTX_NEW], [/* Define to 1 if you have the declaration of `EVP_MD_CTX_new\', and to 0 if
    you don\'t. */
 @%:@undef HAVE_DECL_EVP_MD_CTX_NEW])
-m4trace:configure.ac:886: -1- AC_SUBST([UNIVALUE_CFLAGS])
-m4trace:configure.ac:886: -1- AC_SUBST_TRACE([UNIVALUE_CFLAGS])
-m4trace:configure.ac:886: -1- m4_pattern_allow([^UNIVALUE_CFLAGS$])
-m4trace:configure.ac:886: -1- AC_SUBST([UNIVALUE_LIBS])
-m4trace:configure.ac:886: -1- AC_SUBST_TRACE([UNIVALUE_LIBS])
-m4trace:configure.ac:886: -1- m4_pattern_allow([^UNIVALUE_LIBS$])
+m4trace:configure.ac:881: -1- AC_SUBST([UNIVALUE_CFLAGS])
+m4trace:configure.ac:881: -1- AC_SUBST_TRACE([UNIVALUE_CFLAGS])
+m4trace:configure.ac:881: -1- m4_pattern_allow([^UNIVALUE_CFLAGS$])
+m4trace:configure.ac:881: -1- AC_SUBST([UNIVALUE_LIBS])
+m4trace:configure.ac:881: -1- AC_SUBST_TRACE([UNIVALUE_LIBS])
+m4trace:configure.ac:881: -1- m4_pattern_allow([^UNIVALUE_LIBS$])
 m4trace:configure.ac:913: -1- AM_CONDITIONAL([EMBEDDED_UNIVALUE], [test x$need_bundled_univalue = xyes])
 m4trace:configure.ac:913: -1- AC_SUBST([EMBEDDED_UNIVALUE_TRUE])
 m4trace:configure.ac:913: -1- AC_SUBST_TRACE([EMBEDDED_UNIVALUE_TRUE])
@@ -1624,13 +1627,13 @@ m4trace:configure.ac:1077: -1- AH_OUTPUT([COPYRIGHT_HOLDERS_FINAL], [/* Copyrigh
 m4trace:configure.ac:1078: -1- AC_SUBST([CLIENT_VERSION_MAJOR], [1])
 m4trace:configure.ac:1078: -1- AC_SUBST_TRACE([CLIENT_VERSION_MAJOR])
 m4trace:configure.ac:1078: -1- m4_pattern_allow([^CLIENT_VERSION_MAJOR$])
-m4trace:configure.ac:1079: -1- AC_SUBST([CLIENT_VERSION_MINOR], [2])
+m4trace:configure.ac:1079: -1- AC_SUBST([CLIENT_VERSION_MINOR], [3])
 m4trace:configure.ac:1079: -1- AC_SUBST_TRACE([CLIENT_VERSION_MINOR])
 m4trace:configure.ac:1079: -1- m4_pattern_allow([^CLIENT_VERSION_MINOR$])
-m4trace:configure.ac:1080: -1- AC_SUBST([CLIENT_VERSION_REVISION], [1])
+m4trace:configure.ac:1080: -1- AC_SUBST([CLIENT_VERSION_REVISION], [0])
 m4trace:configure.ac:1080: -1- AC_SUBST_TRACE([CLIENT_VERSION_REVISION])
 m4trace:configure.ac:1080: -1- m4_pattern_allow([^CLIENT_VERSION_REVISION$])
-m4trace:configure.ac:1081: -1- AC_SUBST([CLIENT_VERSION_BUILD], [0])
+m4trace:configure.ac:1081: -1- AC_SUBST([CLIENT_VERSION_BUILD], [2])
 m4trace:configure.ac:1081: -1- AC_SUBST_TRACE([CLIENT_VERSION_BUILD])
 m4trace:configure.ac:1081: -1- m4_pattern_allow([^CLIENT_VERSION_BUILD$])
 m4trace:configure.ac:1082: -1- AC_SUBST([CLIENT_VERSION_IS_RELEASE], [true])
